# ssw-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COMPONENTS.md  CUSTOM_COMPONENTS.md  Cargo.toml  README.md  SSW_CSS.md  SSW_MARKDOWN.md  SSW_WORKERS.md
context/: README.md  current.md  decisions.md
context/sessions/: 2026-04-09.md  2026-04-23.md  2026-05-06.md  README.md
crates/ssw-actix/: Cargo.toml
crates/ssw-actix/src/: form.rs  lib.rs
crates/ssw-actix/tests/: http_flow.rs
crates/ssw-components/: Cargo.toml
crates/ssw-components/src/: button.rs  data.rs  field.rs  layout.rs  lib.rs  notice.rs  page.rs
crates/ssw-core/: Cargo.toml
crates/ssw-core/src/: lib.rs
crates/ssw-css/: Cargo.toml
crates/ssw-css-macros/: Cargo.toml
crates/ssw-css-macros/src/: lib.rs
crates/ssw-css/src/: lib.rs
crates/ssw-html/: Cargo.toml
crates/ssw-html-macros/: Cargo.toml
crates/ssw-html-macros/src/: lib.rs
crates/ssw-html/src/: lib.rs
crates/ssw-workers/: Cargo.toml
crates/ssw-workers/src/: lib.rs
examples/: README.md
examples/ssw-intake-demo/: Cargo.toml
examples/ssw-intake-demo/src/: main.rs
examples/ssw-projects-demo/: Cargo.toml
examples/ssw-projects-demo/src/: components.rs  main.rs
examples/ssw-workers-demo/: Cargo.toml  package-lock.json  package.json  wrangler.toml
examples/ssw-workers-demo/src/: lib.rs
scripts/: capture-intake-demo.sh
styles/: ssw-components-default.css  ssw-theme-default.css
