[workspace]
members = [
    "crates/ssw-core",
    "crates/ssw-actix",
    "crates/ssw-html",
    "crates/ssw-html-macros",
    "crates/ssw-css",
    "crates/ssw-css-macros",
    "crates/ssw-components",
    "crates/ssw-workers",
    "examples/ssw-intake-demo",
    "examples/ssw-projects-demo",
    "examples/ssw-workers-demo",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/rikibbot/ssw-rs"

[workspace.dependencies]
actix-web = "4.11.0"
getrandom = "0.3.4"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "parsing"] }
worker = "0.8.1"

[workspace.lints.rust]
unsafe_code = "forbid"
