[package]
name = "ssw-workers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ssw-core = { path = "../ssw-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3.95", features = ["Crypto", "WorkerGlobalScope"] }
worker = { workspace = true }

[lints]
workspace = true
