[package]
name = "ssw-projects-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web = { workspace = true }
ssw-actix = { path = "../../crates/ssw-actix" }
ssw-css = { path = "../../crates/ssw-css" }
ssw-components = { path = "../../crates/ssw-components" }
ssw-core = { path = "../../crates/ssw-core" }
ssw-html = { path = "../../crates/ssw-html" }

[lints]
workspace = true
