[package]
name = "ssw-workers-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ssw-components = { path = "../../crates/ssw-components" }
ssw-core = { path = "../../crates/ssw-core" }
ssw-html = { path = "../../crates/ssw-html" }
ssw-workers = { path = "../../crates/ssw-workers" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { workspace = true }

[lints]
workspace = true
